cmake_minimum_required(VERSION 3.31)
project(OOP_Ashish)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP_Ashish main.cpp
        Constructor.cpp
        Employee.cpp
        static.cpp
        destructor.cpp
        inheretance.cpp
        "parameterized Constructor.cpp"
        Assignment.cpp
        Protected.cpp
        scope_widining.cpp
        Inheretance2.cpp
        cololision.cpp
        Abstraction.cpp
        Function_Overloading.cpp
        Function_overriding.cpp
        "operator overloading.cpp"
        exama.cpp
        "operator overload.cpp"
        copyConstructor.cpp
        Static_binding.cpp
        Dinamic_binding.cpp
        operator_overload.cpp
        list.cpp
        vector.cpp
        Exception_handling.cpp
        Assigiment.cpp
        custom_exception.cpp
        multi_exception.cpp
        Template.cpp
)
